--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -42,7 +42,7 @@
             - (Jesli ktos nie jest zalogowany to nie moze praktycznie nic zrobić, jedynie sprawdzić status magazynu który jest 0 bo nic tam póki co nie ma, <br>
             - jesli wejdziemy na strone http://localhost:8080/add albo /delete /warehouseman to nic zobaczymy nic prócz napisu który mówi żeby sie zalogować <br>
             - , natomiast zaraz po zalogowaniu zobaczymy cała funkcjonalnosc strony. Wylogowanie powoduje powrót do początku przed zalogowaniem. <br>
-            - Jesli po wylogowaniu wejdziemy w status zobaczymy tam produkty które dodalismy przed wylogowaniem)<br>
+            - Jesli po wylogowaniu wejdziemy w status zobaczymy tam produkty które dodalismy przed wylogowaniem)<br><br>
 
         </p>
     </div>
