--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -31,7 +31,7 @@
         <h1>WAREHOUSE PAGE</h1>
         <p>
             This website was created by me(Paweł Dziwisz), but i used a lots of help from one of Youtuber Easy Tutorials.<br>
-            Of course i did a lots of changes, but the basis of the page was from tutorial.
+            Of course i did a lots of changes, but the basis of the page was from tutorial
         </p>
         <p>
             <br>Functions :<br>
